app/src/main/java/com/example/nutrishare_android/ui/theme/Color.kt
package com.example.nutrishare_android.ui.theme

import androidx.compose.ui.graphics.Color

// NutriShare Brand Colors (orange base)
val NutriGreen = Color(0xFFF59E0B)          // primary (orange)
val NutriGreenDark = Color(0xFFB45309)      // primary dark
val NutriGreenLight = Color(0xFFFBBF24)     // primary light
val NutriGreenContainer = Color(0xFFFFEDD5) // primary container

val NutriOrange = Color(0xFFFDE047)         // secondary (warm yellow)
val NutriOrangeContainer = Color(0xFFFFF3C4)
val NutriAccentSoft = Color(0xFFF8E7D2)
val NutriError = Color(0xFFD32F2F)          // error

val BackgroundLight = Color(0xFFFFF7ED)     // background
val SurfaceWhite = Color(0xFFFFFFFF)
val SurfaceMuted = Color(0xFFFFFBF5)
val TextPrimary = Color(0xFF1A1A1A)
val TextSecondary = Color(0xFF757575)
val DividerColor = Color(0xFFE0E0E0)
